# langgraph-pr

./: package-lock.json
langgrap-pr/conditional_workflow/: main.py  pyproject.toml  requirements.txt
langgrap-pr/conditional_workflow/http/: post.http
langgrap-pr/iterator_workflow/: app.py  main.py  pyproject.toml  requirements.txt
langgrap-pr/iterator_workflow/ui/: index.html  script.js  style.css
langgrap-pr/langgraph-chatbot/backend/: .env.example  app.py  pyproject.toml  requirements.txt
langgrap-pr/langgraph-chatbot/backend/http/: chatbot.http
langgrap-pr/langgraph-chatbot/backend/src/core/: config.py
langgrap-pr/langgraph-chatbot/backend/src/db/: mongo.py
langgrap-pr/langgraph-chatbot/backend/src/graph/: chatbot_graph.py
langgrap-pr/langgraph-chatbot/backend/src/llm/: lllm_groq.py
langgrap-pr/langgraph-chatbot/backend/src/models/: schemas.py
langgrap-pr/langgraph-chatbot/backend/src/nodes/: chat_node.py  modify_query.py
langgrap-pr/langgraph-chatbot/backend/src/routers/: chat.py  sessions.py
langgrap-pr/langgraph-chatbot/backend/src/schema/: answer_schema.py
langgrap-pr/langgraph-chatbot/backend/src/services/: generate_title.py  history.py  summarizer.py
langgrap-pr/langgraph-chatbot/backend/src/state/: chat_state.py
langgrap-pr/langgraph-chatbot/backend/src/tools/: calculator_tool.py  web_search_tool.py  webscrapper_tool.py
langgrap-pr/langgraph-chatbot/backend/src/utils/: prompt_utils.py  query_utils.py
langgrap-pr/langgraph-chatbot/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
(+58 files in other folders)
