[project]
name = "langgraph-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.12",
    "bs4>=0.0.2",
    "ddgs>=9.5.5",
    "dotenv>=0.9.9",
    "fastapi>=0.110",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.10",
    "langchain-groq>=0.1.3",
    "langgraph>=0.2.23",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "motor>=3.4",
    "pydantic>=2.7",
    "python-dotenv>=1.0.1",
    "requests>=2.32",
    "uvicorn[standard]>=0.30",
]
